--- a/Components/Pages/Product.razor
+++ b/Components/Pages/Product.razor
@@ -1,5 +1,6 @@
 ﻿@page "/product/{Id:int}"
 @rendermode InteractiveServer
+@using MaisonTelecom.Components.Shared
 @using Microsoft.EntityFrameworkCore
 @using MaisonTelecom.Data
 @using MaisonTelecom.Services
